--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+alembic==1.7.1
 click==8.0.1
 dominate==2.6.0
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
+Flask-Migrate==3.1.0
+Flask-Reuploaded==1.1.0
 Flask-Script==2.0.3
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+greenlet==1.1.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.5
 MarkupSafe==2.0.1
+psycopg2-binary==2.9.1
+SQLAlchemy==1.4.23
 visitor==0.1.3
 Werkzeug==2.0.1
 WTForms==2.3.3
